Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/5086027/T5086027.out
T5086027.java:10:21: compiler.err.generic.throwable
1 error
